<resources>
    <string name="app_name">MVVM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello</string>
    <string name="phone_number">05XXXXXXXX</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot Password</string>
    <string name="continue_">Continue</string>
    <string name="no_account">DON\'T HAVE AN ACCOUNT?</string>
    <string name="sign_up">SIGNUP</string>
    <string name="phone_empty">phone empty</string>
    <string name="password_empty">password empty</string>
</resources>
