<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.pial.mvvm.ui.login.view.login.LoginFragment">
    <data>
        <variable
            name="viewModel"
            type="com.pial.mvvm.ui.login.view.login.LoginFragmentViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f6f6f9"
        android:focusableInTouchMode="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/header"
                layout="@layout/sign_in_header" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/two_third_vertical_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/one_third_vertical_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.33" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/begin_vertical_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="25dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/half_vertical_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.67" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_vertical_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="25dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/begin_horizontal_guildline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_horizontal_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="16dp" />

            <com.pial.mvvm.utils.customFonts.TextViewSemiBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="30sp"
                android:text="Learning MVVM"
                android:textColor="#ffffff"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="@id/begin_vertical_guideline"
                app:layout_constraintTop_toTopOf="@id/begin_horizontal_guildline" />

            <com.pial.mvvm.utils.customFonts.CustomEditText
                android:id="@+id/edit_text_phone"
                style="@style/edit_text_style"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:background="@drawable/edit_text_shape"
                android:drawableStart="@drawable/ic_phone_call"
                android:drawablePadding="10dp"
                android:text="@={viewModel.loginRequest.phoneNumber}"
                app:error="@{viewModel.observableFieldForEmail}"
                android:hint="@string/phone_number"
                android:maxLength="10"
                android:digits="0123456789"
                android:inputType="phone"
                app:layout_constraintBottom_toBottomOf="@id/header"
                app:layout_constraintEnd_toEndOf="@id/end_vertical_guideline"
                app:layout_constraintStart_toStartOf="@+id/begin_vertical_guideline" />

            <com.pial.mvvm.utils.customFonts.CustomEditText
                android:id="@+id/edit_text_password"
                style="@style/edit_text_style"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/edit_text_shape"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:text="@={viewModel.loginRequest.password}"
                app:error="@{viewModel.observableFieldForPassword}"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@id/end_vertical_guideline"
                app:layout_constraintStart_toStartOf="@+id/begin_vertical_guideline"
                app:layout_constraintTop_toBottomOf="@id/edit_text_phone" />

            <com.pial.mvvm.utils.customFonts.TextViewMedium
                android:id="@+id/text_view_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:text="@string/forget_password"
                android:textAllCaps="true"
                android:textColor="#b4bbc9"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
                app:layout_constraintStart_toStartOf="@+id/begin_vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_password"
                app:layout_constraintBottom_toTopOf="@id/button_continue"
                />

            <RelativeLayout
                android:id="@+id/button_continue"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_shape"
                android:onClick="@{() -> viewModel.onLoginBtnClick()}"
                android:elevation="2dp"
                app:layout_constraintEnd_toStartOf="@id/end_vertical_guideline"
                app:layout_constraintStart_toStartOf="@id/begin_vertical_guideline"
                app:layout_constraintTop_toBottomOf="@id/text_view_forget_password">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    app:srcCompat="@drawable/ic_path_1025"

                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    app:srcCompat="@drawable/ic_path_1024"

                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    app:srcCompat="@drawable/ic_path_1026"

                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    app:srcCompat="@drawable/ic_path_1027"

                    />

                <com.pial.mvvm.utils.customFonts.TextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:lineSpacingExtra="9sp"
                    android:text="@string/continue_"
                    android:textAllCaps="true"
                    android:textColor="#449aa3"
                    android:textSize="16sp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="@id/end_vertical_guideline"
                app:layout_constraintStart_toStartOf="@id/begin_vertical_guideline"
                app:layout_constraintTop_toBottomOf="@id/button_continue">

                <com.pial.mvvm.utils.customFonts.TextViewMedium
                    android:id="@+id/text_view_no_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="2sp"
                    android:text="@string/no_account"
                    android:textAllCaps="true"
                    android:textColor="#b4bbc9"
                    android:textSize="12sp" />

                <com.pial.mvvm.utils.customFonts.TextViewMedium
                    android:id="@+id/textViewSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.onProfileGet()}"
                    android:layout_marginStart="10dp"
                    android:lineSpacingExtra="2sp"
                    android:text="@string/sign_up"
                    android:textAllCaps="true"
                    android:textColor="#449aa3"
                    android:textSize="12sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
